Fix: Text spacing, Title

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -94,6 +94,7 @@ $text-color: #333;
     text-align: center;
     font-size: 2.5rem;
     font-family: 'Kaisei Opti', serif;
+    letter-spacing: 2px;
   }
 
   p {
