--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -100,6 +100,7 @@ body {
   text-align: center;
   font-size: 2.5rem;
   font-family: "Kaisei Opti", serif;
+  letter-spacing: 2px;
 }
 #main-text p {
   margin: 0.5rem 0;
